# menugen

./: Cargo.toml
examples/: appctx.rs  html.rs  html2.rs  reciter.rs  simple.rs
src/: flatiter.rs  lib.rs  menu.rs  menuitem.rs  recfiltiter.rs  reciter.rs
tests/: filter.rs  hier.rs
