[package]
name = "menugen"
version = "0.1.0"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
keywords = [ "menu", "generator", "html" ]
categories = [ "encoding", "web-programming" ]
repository = "https://github.com/openqrnch/menugen"
description = "Hierarchical menu generation library."

[dependencies]
